--- a/currencySpirit/src/main/res/values/strings.xml
+++ b/currencySpirit/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="item_currency">牛币</string>
     <string name="item_user">我的</string>
     <string name="loading">拼命加载中...</string>
-    <string name="load_failed">加载失败，请稍后重试</string>
+    <string name="load_failed">加载失败，点击重试</string>
     <string name="exit_app">再按一次退出程序</string>
     <string name="item_time_format">时间:yyyy年MM月dd日 hh:mm</string>
     <string name="item_history">我浏览的历史</string>
